# Ohjelmistotekniikka

./: .gitignore  README.md
Aarreluola/: .coveragerc  pyproject.toml
Aarreluola/assets/campaigns/testCampaign/: Level1.tmx  Level2.tmx  order.txt  tileset.tsx
Aarreluola/assets/enemies/enemy0/: info.txt
Aarreluola/assets/enemies/enemy1/: info.txt
Aarreluola/assets/enemies/enemy2/: info.txt
Aarreluola/assets/pickups/ammobox/: info.txt
Aarreluola/assets/pickups/ankh/: info.txt
Aarreluola/dokumentaatio/: arkkitehtuurikuvaus.md  campaign_creation_information.md  change_log.md  enemy_creation_information.md  level_creation_information.md  play_instructions.md  testaus_dokumentaatio.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
Aarreluola/src/: action.py  character.py  enemy.py  game.py  game_statistics.py  gamestate.py  instance_loader.py  map.py  pickup.py  player.py  renderer.py  zone.py
Aarreluola/src/tests/: character_test.py  game_test.py  player_test.py
laskarit/: viikko1.md
todoapp/: pyproject.toml  tasks.py
todoapp/assets/images/: tileset.psd
todoapp/dokumentaatio/: change_log.md  level_creation_information.md  level_creation_information.txt  pickup_creation_information.md  play_instructions.md  tyoaikakirjanpito.md  tyoaikakirjanpito.txt  vaatimusmaarittely.md
todoapp/src/: action.py  character.py  enemy.py  game.py  gamestate.py  lighting.py  map.py  pickup.py  player.py  projectile.py  projectile_manager.py  renderer.py  ui.py  zone.py
todoapp/src/tests/: character_test.py  enemy_test.py  game_test.py  pickup_test.py  player_test.py
(+30 files in other folders)
