[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["Jani <jankuul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"
pygame = "^2.5.2"
pytmx = "3.32"


[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
invoke = "^2.2.0"
pylint = "^3.0.2"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
