[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["Jani <jankuul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"
pygame = "^2.5.2"
pytmx = "3.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
